--- a/client/products.html
+++ b/client/products.html
@@ -19,7 +19,7 @@
         <option value="price">Price</option>
         <option value="name">Name</option>
       </select>
-      <button onclick="sort()">Sort</button>
+      <button class="sort-btn" onclick="sort()">Sort</button>
       <div class="flex-container">
         <table>
           <thead class="shopHead">
