--- a/client/products.html
+++ b/client/products.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Document</title>
+    <title>Products</title>
   </head>
   <body onload="init()">
     <button class="btn-logout" href="/">
