--- a/client/products.html
+++ b/client/products.html
@@ -12,7 +12,7 @@
       <span class="btn-logoutspan" onclick="logout()">Logout</span>
     </button>
     <!-- <button class="btn-logout" onclick="logout()">Logout</button> -->
-    <div class="main-container">
+    <div class="main-container-products">
       <h1>Sv-Shop</h1>
       <select class="filter-products">
         <option value="all">Filter by...</option>
