--- a/client/products.html
+++ b/client/products.html
@@ -12,39 +12,47 @@
       <span class="btn-logoutspan" onclick="logout()">Logout</span>
     </button>
 
-    <h1>Sv-Shop</h1>
-    <select class="filter-products">
-      <option value="all">Filter by...</option>
-      <option value="price">Price</option>
-      <option value="name">Name</option>
-    </select>
-    <button class="sort-btn" onclick="sort()">Sort</button>
+    <figure>
+      <h1>Sv-Shop</h1>
+    </figure>
+    <div class="flexbox-container">
+      <div class="flexbox-item flexbox-item1">
+        <select class="filter-products">
+          <option class="option" value="all">Filter by...</option>
+          <option class="option" value="price">Price</option>
+          <option class="option" value="name">Name</option>
+        </select>
+        <button class="sort-btn" onclick="sort()">Sort</button>
+        <table>
+          <thead class="shopHead">
+            <tr>
+              <th>Name</th>
+              <th>Price</th>
+              <th>Availability</th>
+              <th>Add to Cart</th>
+            </tr>
+          </thead>
+          <tbody class="shopTable"></tbody>
+        </table>
+      </div>
 
-    <table>
-      <thead class="shopHead">
-        <tr>
-          <th>Name</th>
-          <th>Price</th>
-          <th>Availability</th>
-          <th>Add to Cart</th>
-        </tr>
-      </thead>
-      <tbody class="shopTable"></tbody>
-    </table>
-
-    <table>
-      <thead class="cartHead">
-        <tr>
-          <th>Name</th>
-          <th>Price</th>
-          <th>Amount</th>
-          <th>Add/Remove</th>
-        </tr>
-      </thead>
-      <tbody class="cartTable"></tbody>
-    </table>
-
-    <button class="btn-buy">Buy</button>
+      <div class="flexbox-item flexbox-item2">
+        <main>
+          <table>
+            <thead class="cartHead">
+              <tr>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Amount</th>
+                <th>Add/Remove</th>
+              </tr>
+            </thead>
+            <tbody class="cartTable"></tbody>
+          </table>
+          <button class="btn-buy" onclick="cartBuy()">Buy</button>
+        </main>
+      </div>
+    </div>
 
     <script src="js/storageService.js"></script>
     <script src="js/app.js"></script>
