--- a/client/products.html
+++ b/client/products.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="flexbox-item flexbox-item2">
-        <main>
+        <main class="cart-main">
           <table>
             <thead class="cartHead">
               <tr>
