app.js server.js html

--- a/client/products.html
+++ b/client/products.html
@@ -15,6 +15,12 @@
     <figure>
       <h1>Sv-Shop</h1>
     </figure>
+    <input
+      onkeyup="searchProduct()"
+      type="text"
+      placeholder="Search..."
+      id="searchbar"
+    />
     <div class="flexbox-container">
       <div class="flexbox-item flexbox-item1">
         <select class="filter-products">
