--- a/client/buy.html
+++ b/client/buy.html
@@ -12,11 +12,15 @@
         <h1 class="header-main">Sv-Shop</h1>
         <div class="main-div">
           <div class="input-wrapper">
-            <label for="email">Amount of Products:</label>
+            <label for="amount"
+              >Amount of Products:<span class="amount-of-products"></span
+            ></label>
           </div>
 
           <div class="input-wrapper">
-            <label for="password">Total Price:</label>
+            <label for="total"
+              >Total Price:<span class="total-price"></span
+            ></label>
           </div>
 
           <button class="order-btn" onclick="placeOrder()">Place Order</button>
