--- a/client/buy.html
+++ b/client/buy.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Buy</title>
   </head>
-  <body onload="  amountOfProducts(),totalPrice()">
+  <body onload="initBuy()">
     <div class="main-container">
       <main>
         <h1 class="header-main">Sv-Shop</h1>
