--- a/client/orders.html
+++ b/client/orders.html
@@ -8,16 +8,18 @@
   </head>
   <body>
     <h1 class="h1-orders">Orders</h1>
-    <table>
-      <thead class="ordersHead">
-        <tr>
-          <th>Order Id</th>
-          <th>User Id</th>
-          <th>Products</th>
-        </tr>
-      </thead>
-      <tbody class="ordersTable"></tbody>
-    </table>
+    <main>
+      <table>
+        <thead class="ordersHead">
+          <tr>
+            <th>Order Id</th>
+            <th>User Id</th>
+            <th>Products</th>
+          </tr>
+        </thead>
+        <tbody class="ordersTable"></tbody>
+      </table>
+    </main>
     <script src="js/storageService.js"></script>
     <script src="js/app.js"></script>
   </body>
