--- a/client/orders.html
+++ b/client/orders.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Orders/All</title>
   </head>
-  <body>
+  <body onload="renderOrders()">
     <h1 class="h1-orders">Orders</h1>
     <main>
       <table>
