--- a/client/orders.html
+++ b/client/orders.html
@@ -8,18 +8,20 @@
   </head>
   <body onload="renderOrders()">
     <h1 class="h1-orders">Orders</h1>
-    <main>
-      <table>
-        <thead class="ordersHead">
-          <tr>
-            <th>Order Id</th>
-            <th>User Id</th>
-            <th>Products</th>
-          </tr>
-        </thead>
-        <tbody class="ordersTable"></tbody>
-      </table>
-    </main>
+    <div class="flexbox-container">
+      <main>
+        <table>
+          <thead class="ordersHead">
+            <tr>
+              <th>Order Id</th>
+              <th>User Id</th>
+              <th>Products</th>
+            </tr>
+          </thead>
+          <tbody class="ordersTable"></tbody>
+        </table>
+      </main>
+    </div>
     <script src="js/storageService.js"></script>
     <script src="js/app.js"></script>
   </body>
