--- a/client/orders.html
+++ b/client/orders.html
@@ -7,10 +7,12 @@
     <title>Orders/All</title>
   </head>
   <body onload="renderOrders()">
-    <h1 class="h1-orders">Orders</h1>
+    <figure>
+      <h1 class="h1-orders">Orders</h1>
+    </figure>
 
     <div class="flexbox-container">
-      <main>
+      <main class="orders-main">
         <table>
           <thead class="ordersHead">
             <tr>
