--- a/client/products.html
+++ b/client/products.html
@@ -12,15 +12,27 @@
       <span class="btn-logoutspan" onclick="logout()">Logout</span>
     </button>
 
+    <a href="/" tabindex="0"
+      ><img
+        class="btn-appstore"
+        src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
+        alt="bn45"
+    /></a>
+    <a href="/" tabindex="0"
+      ><img
+        class="btn-googleplay"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Google_Play_Store_badge_EN.svg/2560px-Google_Play_Store_badge_EN.svg.png"
+        alt="bn45"
+    /></a>
     <figure>
       <h1>Sv-Shop</h1>
     </figure>
-    <input
+    <!-- <input
       onkeyup="searchProduct()"
       type="text"
       placeholder="Search..."
       id="searchbar"
-    />
+    /> -->
     <div class="flexbox-container">
       <div class="flexbox-item flexbox-item1">
         <select class="filter-products">
